Ajout d'une ligne

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bonjour</title>
+  <title>Bonjour les SIO2</title>
 </head>
 
 <body>
 <h1>Hello World </h1>
+<h1>Bonjour a tous</h1>
 </body>
 </html>
